Sun Apr 15 06:01:56 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Any/Recursive/Test.idl:
        * tests/Any/Recursive/client.cpp:
        * tests/Bug_2844_Regression/*:
          Moved regression for bug 2844 to its own file

Sat Apr 14 20:22:13 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/DynAny_Test/test_dynenum.cpp:

          Removed old exception macros.

Sat Apr 14 19:00:56 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Any/Recursive/Test.idl:
        * tests/Any/Recursive/client.cpp:
          Removed regression for bug 2804, this has now its own test program

Sat Apr 14 18:57:56 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2804_Regression/*:
          Moved the test for bug 2804 from Any/Recursive to its own seperate test, makes
          it easier to reproduce and I am moving all known issues outside of the
          Any/Recursive test so that we can make sure that things that do work keep
          working

Fri Apr 13 19:47:56 UTC 2007 Yan Dai  <dai_y@ociweb.com>

          Fixed several bugs in DynamicAny (See bugzilla #2896).

        * tao/DynamicAny/DynAny_i.cpp:
        * tao/DynamicAny/DynAnyFactory.cpp:

          Added DynamicAny support for longdouble type.

        * tao/DynamicAny/DynUnion_i.cpp:

          Fixed bug in destroy() that does not check if the member is nil
          to destroy.  This causes crash when union has no active
          member.

        * tao/DynamicAny/DynEnum_i.cpp:

          Fixed bug in
          get_as_string/set_as_string/get_as_ulong/set_as_ulong that do
          not strip the alias to find the member information. This causes
          the problem when calling these functions for typedefed enums
          encapsulated in structs.

        * tao/DynamicAny/DynCommon.cpp:

          Moved out ACE_static_cast from "if" statement in next() method
          to avoid strange problem "coredump from signal 10" on