@@ -1,0 +1,22 @@
+// -*- MPC -*-
+// $Id$
+
+project(*idl): taoidldefaults, ami {
+  IDL_Files {
+    ami_test.idl
+  }
+  custom_only = 1
+}
+
+project(*Client): messaging, taoexe, portableserver, ami {
+  after += *idl
+  Source_Files {
+    client.cpp
+    ami_testS.cpp
+    ami_testC.cpp
+    ami_test_i.cpp
+  }
+  IDL_Files {
+  }
+}
+
