@@ -1,0 +1,39 @@
+
+//=============================================================================
+/**
+ *  @file    ami_test.idl
+ *
+ *  $Id$
+ *
+ *  IDL description of the AMI Test interface
+ *
+ *
+ *  @author Alexander Babu Arulanthu <alex@cs.wustl.edu>
+ *  @author Michael Kircher <Michael.Kircher@mchp.siemens.de>
+ */
+//=============================================================================
+
+
+
+module A
+  {
+    exception DidTheRightThing {
+      long id;
+      string whatDidTheRightThing;
+    };
+
+    interface AMI_Test
+      {
+        long foo (out long out_l,
+                  in long in_l,
+                  in string in_str)
+          raises (DidTheRightThing);
+
+        attribute long yadda;
+
+        oneway void shutdown ();
+
+        void inout_arg_test (inout string str);
+      };
+
+  };
